@@ -50,11 +50,12 @@ int addClock(int x,int y,int grav)
 	clockButton->LFSTK_setFontString(prefs.LFSTK_getCString(prefs.LFSTK_hashFromKey("font")),true);
 	clockButton->LFSTK_setIgnores(false,false);
 	clockButton->LFSTK_setTile(NULL,0);
+	clockButton->LFSTK_setLabelAutoColour(true);
 	clockButton->LFSTK_setGadgetColourPair(NORMALCOLOUR,panelBGColour,panelTextColour);
-	clockButton->LFSTK_setStyle(BEVELNONE);
-	
-	clockButton->drawLabelBG=true;
-	clockButton->autoLabelBGColour=true;
+	clockButton->LFSTK_setStyle(BEVELNONE);	
+
+	//clockButton->drawLabelBG=true;
+	//clockButton->autoLabelBGColour=true;
 
 	return(iconWidth);
 }
