@@ -1,4 +1,5 @@
 0.2.0
+Adjusted desktop switcher and clock labels.
 Allow DnDing multiple files.
 Removed legacy code.
 Tasks appear indock sorted by name.
